# weather_stations_iceland

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt  stations.csv  stations.geojson  weather_stations_iceland.py
.github/workflows/: update_stations.yml
